--- a/index.html
+++ b/index.html
@@ -6,37 +6,69 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css"
+    />
     <link rel="stylesheet" href="./styles.css" />
-    <script src="./script.js" defer></script>
-    <link rel="shortcut icon" href="./images/favicon.png" type="image/png" />
-    <title>TodoTrack</title>
+    <script src="./main.js" defer></script>
+    <title>Document</title>
   </head>
   <body>
     <aside id="sidebar">
-      <ul id="category-list">
+      <span id="logo">Todo<span>Track</span></span>
+      <ul>
         <li>
-          <button type="button">
-            All Tasks <span id="all-tasks-count"></span>
-          </button>
+          <ul>
+            <li>
+              <button type="button">All Tasks</button>
+              <span id="all-tasks-count"></span>
+            </li>
+            <li>
+              <button type="button">Checked Tasks</button
+              ><span id="checked-tasks-count"></span>
+            </li>
+            <li>
+              <button type="button">Favorites Task</button
+              ><span id="favorites-tasks-count"></span>
+            </li>
+          </ul>
         </li>
         <li>
-          <button type="button">
-            Checked Tasks <span id="checked-tasks-count"></span>
-          </button>
-        </li>
-        <li>
-          <button type="button">
-            Favorites Task <span id="favorites-tasks-count"></span>
-          </button>
+          <ul id="category-list"></ul>
         </li>
       </ul>
       <form id="category-form">
-        <input type="text" id="category-input" placeholder="Add a new category">
+        <input
+          type="text"
+          id="category-input"
+          placeholder="Add a new category"
+        />
         <button type="submit" id="add-category-button">+</button>
       </form>
     </aside>
+    <span id="line"></span>
+    <main id="main">
+      <section>
+        <h1 id="title">All Tasks</h1>
+        <form id="task-form">
+          <input
+            type="text"
+            id="task-input"
+            placeholder="Add task or search by name"
+          />
+          <select id="task-category">
+            <option value="Categories" selected disabled>
+              Select a Category
+            </option>
+          </select>
+          <button type="submit" id="add-task-button">Add</button>
+        </form>
+        <ul id="task-list"></ul>
+      </section>
+    </main>
   </body>
 </html>
